# pirkle

./: .gitignore  Cargo.toml  LICENSE  README.md  test_examples.sh  test_polars.sh
.github/workflows/: release.yml
examples/: company.sqlite  customers.csv  customers.sqlite  data.csv  departments.csv  employees.csv  make_sqlite.sh  mydb.sqlite  orders.csv  orders.sqlite
examples/queries/: avg_age_by_department.prql  country_summary.prql  engineering_team.prql  high_earners.prql  revenue_by_region.prql  salary_analysis.prql  top_5_paid.prql
src/: main.rs
