[package]
name = "pirkle"
version = "0.1.0"
edition = "2021"
authors = ["Dirk Loss <mail@dirk-loss.de>"]
description = "A CLI tool to query files using PRQL"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
prql-compiler = "0.12.2"  # Updated to the latest version
rusqlite = "0.29.0"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true