[package]
name = "pirkle"
version = "0.3.0"
edition = "2021"
authors = ["Dirk Loss <mail@dirk-loss.de>"]
description = "A CLI tool to query files using PRQL"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
prql-compiler = "0.12.2"
rusqlite = { version = "0.29", features = ["bundled"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true