[package]
name = "pirkle"
version = "0.4.4"
edition = "2021"
authors = ["Dirk Loss <mail@dirk-loss.de>"]
description = "A CLI tool to query files using PRQL"
repository  = "https://github.com/dloss/pirkle"
homepage    = "https://github.com/dloss/pirkle"
readme      = "README.md"
keywords    = ["csv", "sqlite", "prql", "cli", "rust"]
categories  = ["command-line-utilities", "database"]
documentation = "https://docs.rs/pirkle"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
prql-compiler = "0.12.2"
rusqlite = { version = "0.35", features = ["bundled"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2"
polars = { version = "0.38.1", features = ["csv", "dtype-datetime", "dtype-decimal"] }

[profile.release]
opt-level = 3
lto = true
strip = true